<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/poster_arrow"
        android:contentDescription="@string/desc_movie_img_poster" />

    <ImageView
        android:id="@+id/ph_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/roundcorner_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_movie_container" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@+id/ph_detail"
        app:layout_constraintStart_toStartOf="@+id/ph_detail"
        app:layout_constraintTop_toTopOf="@+id/ph_detail"
        tools:text="Content Title" />

    <TextView
        android:id="@+id/ph_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/title_detail_date"
        app:layout_constraintEnd_toEndOf="@+id/ph_detail"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/ph_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/ph_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/title_detail_runtime"
        app:layout_constraintEnd_toEndOf="@+id/ph_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_date"
        app:layout_constraintTop_toBottomOf="@+id/ph_date"/>

    <TextView
        android:id="@+id/ph_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/title_detail_genre"
        app:layout_constraintEnd_toEndOf="@+id/ph_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_time"
        app:layout_constraintTop_toBottomOf="@+id/ph_time" />

    <TextView
        android:id="@+id/ph_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/title_detail_overview"
        app:layout_constraintEnd_toEndOf="@+id/ph_genre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_genre"
        app:layout_constraintTop_toBottomOf="@+id/ph_genre" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/ph_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ph_date"
        app:layout_constraintTop_toTopOf="@+id/ph_date"
        tools:text="2019-12-17" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/ph_time"
        app:layout_constraintTop_toTopOf="@+id/ph_time"
        tools:text="1h 43m" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/ph_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ph_genre"
        app:layout_constraintTop_toTopOf="@+id/ph_genre"
        tools:text="Action, Drama, Comedy" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:paddingBottom="50dp"
        android:lineSpacingMultiplier="1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ph_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_overview"
        app:layout_constraintTop_toBottomOf="@+id/ph_overview"
        app:layout_constraintVertical_bias="0.053"
        tools:text="content content overviewoverview content overview content overviewcontent overview content overview" />

</androidx.constraintlayout.widget.ConstraintLayout>