<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_detail_poster"
            android:layout_width="110dp"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            tools:src="@drawable/poster_bumblebee"
            android:contentDescription="@string/desc_movie_backdrop" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_detail_backdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_movie_img_poster"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/poster_creed" />

    <ImageView
        android:id="@+id/ph_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/roundcorner_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_movie_container" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="8dp"
        android:maxLines="2"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ph_detail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cv_detail"
        app:layout_constraintTop_toTopOf="@+id/ph_detail"
        tools:text="Content Title" />

    <ProgressBar
        android:id="@+id/progressbar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/ph_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_star"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        app:layout_constraintTop_toTopOf="@+id/ph_detail" />

    <ImageView
        android:id="@+id/ph_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_rate_review"
        app:layout_constraintBottom_toBottomOf="@+id/cv_detail"
        app:layout_constraintStart_toStartOf="@+id/ph_average"
        app:layout_constraintTop_toBottomOf="@+id/ph_average"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ph_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="18dp"
        android:text="@string/title_detail_status"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cv_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_detail"
        app:layout_constraintTop_toBottomOf="@+id/cv_detail" />

    <TextView
        android:id="@+id/ph_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/title_detail_date"
        app:layout_constraintEnd_toEndOf="@+id/ph_status"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_status"
        app:layout_constraintTop_toBottomOf="@+id/ph_status" />


    <TextView
        android:id="@+id/ph_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/title_detail_overview"
        app:layout_constraintEnd_toEndOf="@+id/ph_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_date"
        app:layout_constraintTop_toBottomOf="@+id/ph_date" />

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ph_date"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ph_date"
        app:layout_constraintTop_toTopOf="@+id/ph_date"
        tools:text="2019-12-17" />

    <TextView
        android:id="@+id/tv_detail_average"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ph_average"
        app:layout_constraintStart_toEndOf="@+id/ph_average"
        app:layout_constraintTop_toTopOf="@+id/ph_average"
        app:layout_constraintVertical_bias="0.0"
        tools:text="7.5" />

    <TextView
        android:id="@+id/tv_detail_count"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ph_count"
        app:layout_constraintStart_toEndOf="@+id/ph_count"
        app:layout_constraintTop_toTopOf="@+id/ph_count"
        tools:text="122.312" />

    <TextView
        android:id="@+id/tv_detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ph_status"
        app:layout_constraintStart_toEndOf="@+id/ph_status"
        app:layout_constraintTop_toTopOf="@+id/ph_status"
        tools:text="Released" />

    <TextView
        android:id="@+id/tv_detail_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:lineSpacingMultiplier="1"
        android:paddingBottom="50dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ph_detail"
        app:layout_constraintEnd_toEndOf="@+id/ph_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_overview"
        app:layout_constraintTop_toBottomOf="@+id/ph_overview"
        app:layout_constraintVertical_bias="0.053"
        tools:text="content content overview overview content overview content overviewcontent overview content overview" />

</androidx.constraintlayout.widget.ConstraintLayout>